--- a/package.json
+++ b/package.json
@@ -21,15 +21,20 @@
   },
   "homepage": "https://github.com/krriii/JobMe#readme",
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.9",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "autoprefixer": "^10.4.20",
+    "nodemon": "^3.1.9",
+    "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.0"
   }
 }
